syntax = "proto3";

option csharp_namespace = "GrpcRevitRunner";

package runrevit;

// The greeting service definition.
service RevitRunner {
  // Sends a greeting
  rpc RunCommand (CommandRequest) returns (CommandOutput);
}

message CommandRequest {
  string command_enum = 1;
  string command_input_json = 2;
}

message CommandOutput {
  string command_output_json = 1;
}